--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 <div class="row-centered">
           <div class="col-md-8">
             <h2 class="no-border large text-left" style="font-family:futura; font-size: 50px; color:#064F76">We are CRS.</h2>
-            <p class="lead text-left"> Welcome to Cold Rolled Solutions Limited. We are a CITB certified company based in Berkshire that specialises in steel framing systems; including infill, free standing, load bearing and pre fabricated panels.</p>
+            <p class="lead text-left"> Welcome to Cold Rolled Solutions Limited. We are a CITB registered company based in Berkshire that specialises in steel framing systems; including infill, free standing, load bearing and pre fabricated panels.</p>
             <p class="lead text-left">We are also highly skilled in dry lining and ceilings, our directors have over 20 years combined experience in commercial and residential interior works, specifically with ceilings, metal framing/gridding (including sub-grids above suspended ceilings) and pan tiles.</p>
             <p class="lead text-left">Please read the about us section for more information regarding our services and take a look at some of our recent projects below. </p>
           </div>
